--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/outfit": "^5.0.8",
     "@fontsource/poppins": "^5.0.8",
     "@fontsource/sacramento": "^5.0.15",
     "@mui/material": "^5.14.14",
